# server/doc/swagger.json
@@ -867,7 +867,7 @@
           "200": {
             "description": "OK",
             "schema": {
-              "$ref": "#definitions/GetProperties"
+              "$ref": "#definitions/Flags"
             }
           },
           "403": {
@@ -898,7 +898,7 @@
           "200": {
             "description": "OK",
             "schema": {
-              "$ref": "#definitions/GetProperty"
+              "$ref": "#definitions/Flag"
             }
           },
           "400": {
@@ -1795,9 +1795,6 @@
         "id": {
           "type": "integer"
         },
-        "status": {
-          "type": "string"
-        },
         "property_id": {
           "type": "integer"
         },
@@ -1821,6 +1818,10 @@
         },
         "agent_name": {
           "type": "string"
+        },
+        "created_on": {
+          "type": "string",
+          "format": "date"
         }
       }
     },
@@ -1847,9 +1848,6 @@
             "id": {
               "type": "integer"
             },
-            "status": {
-              "type": "string"
-            },
             "property_id": {
               "type": "integer"
             },
@@ -1864,6 +1862,10 @@
             },
             "description": {
               "type": "string"
+            },
+            "created_on": {
+              "type": "string",
+              "format": "date"
             }
           }
         }
